--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,203 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  position: relative;
+  height: 400px;
+  border-bottom: 1px solid white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cloud {
+  position: relative;
+  width: 320px;
+  height: 100px;
+  background: #fff;
+  border-radius: 100px;
+  top: 50px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cloud::before {
+  content: "";
+  position: absolute;
+  width: 110px;
+  height: 110px;
+  background: #fff;
+  border-radius: 50%;
+  left: 40px;
+  top: -50px;
+  box-shadow: 90px 0 0 30px #fff;
+}
+.rain {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+/* .rain span {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: red;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / var(--i));
+  transform-origin: bottom;
+} */
+
+.spanone {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 23);
+  transform-origin: bottom;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.spantwo {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 11);
+  transform-origin: bottom;
+}
+
+.spanthree {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 21);
+  transform-origin: bottom;
+}
+
+.spanfour {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 12);
+  transform-origin: bottom;
+}
+
+.spanfive {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 16);
+  transform-origin: bottom;
+}
+
+.spansix {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 21);
+  transform-origin: bottom;
+}
+
+.spanseven {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 16);
+  transform-origin: bottom;
+}
+
+.spaneight {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 30);
+  transform-origin: bottom;
+}
+
+.spannine {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 14);
+  transform-origin: bottom;
+}
+
+.spanten {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  bottom: 10px;
+  left: 30px;
+  background: #fff;
+  margin: 0 2px;
+  border-radius: 50%;
+  animation: animate 5s linear infinite;
+  animation-duration: calc(15s / 25);
+  transform-origin: bottom;
+}
+
+@keyframes animate {
+  0% {
+    transform: translateY(0) scale(1);
   }
-  to {
-    transform: rotate(360deg);
+  70% {
+    transform: translateY(295px) scale(1);
+  }
+  100% {
+    transform: translateY(290px) scale(0);
   }
 }
